@@ -1,3 +1,4 @@
+* Remove special uom search clause
 * New product types: Goods, Assets and Service
 * Category is no more required on product
 
